# exercise

./: .bumpversion.toml  .copier-answers.yml  .pre-commit-config.yaml  .prettierignore  README.md  Tiltfile  cspell.config.yaml  openapi_excers.yaml
.devcontainer/: devcontainer.json  postCreateCommand.sh  postStartCommand.sh
.github/workflows/: build.yml  check-bump-label.yml  pre-commit.yml
services/backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  pyproject.toml
services/backend/chart/: Chart.yaml  values.yaml
services/backend/chart/templates/: configmap.yaml  deployment.yaml  ingressRoute.yaml  init-job.yaml  required.yaml  secret.yaml  service.yaml
services/backend/src/excers/: __main__.py  app.py  cli.py  feature_flags.py
services/backend/tests/: test_version.py
services/frontend/: .dockerignore  .eslintrc.yml  Dockerfile.dev  Dockerfile.storybook  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
services/frontend/.storybook/: preview.ts
services/frontend/chart/: Chart.yaml  values.yaml
services/frontend/chart/templates/: configmap.yaml  deployment.yaml  ingressRoute.yaml  service.yaml
services/frontend/src/: index.ts  types.d.ts
services/frontend/src/api/: README.md  index.ts
services/frontend/src/api/models/: User.ts
services/frontend/src/api/services/: AuthService.ts  DefaultService.ts
services/frontend/src/feature_flags/: FLAGS.ts  isEnabled.ts
services/frontend/src/test/: app.vue  auth.ts  main.ts
